# Advance-Analysis

./: .gitignore  CLAUDE.md  DO 4-Advance Analysis.txt  Excel_COM_Best_Practices.md  FIXES_APPLIED.md  README.md  README_RUN.md  cbp_udo_response.txt  cbp_udo_review.txt  cbp_udo_review_fy25_q2_summary.txt  cd_udo_response.txt  cg_review_pt.txt  cg_udo_note.txt  cg_udo_review_q2.txt  cg_udo_review_q4_summary.txt  cy_advance_analysis.py  errors.txt  gui_window.py  gui_window_v2.py  pyproject.toml  run.py  run_advance_analysis.py  test_application_errors.py  test_com_operations.py  test_comparative_file_selection.py  test_excel_error_fixes.py  test_full_processing.py  test_import_fixes.py  test_syntax_only.py  test_with_debug_logging.py  udo_validation.py  wmd_udo_review.txt  wmd_udo_review_fy25_q2_summary.txt
.claude/: settings.local.json
.github/: copilot-instructions.md
data/: CY 4-Advance Analysis.txt  PY 4-Advance Analysis.txt
docs/: advance_prepayment_column_fix.md  application_summary.md  certification_advances_fix.md  com_enhancements_summary.md  comparative_period_update.md  do_concatenate_implementation.md  enhancement_summary.md  error_resolution_tasks.md  excel_com_implementation_strategy.md  excel_processing_flow_summary.md  excel_save_fix.md  header_logging_enhancement.md  implementation_status.md  inputs_folder_enhancement.md  pivot_table_restoration.md  power_query_analysis.md  status_validations_integration.md  strategic_com_solution.md
inputs/: .gitkeep  README.md
logs/: .gitkeep  README.md
outputs/: .gitkeep
src/: __init__.py
src/advance_analysis/: __init__.py  main.py
src/advance_analysis/core/: __init__.py  advance_analysis_merged.py  advance_analysis_processing.py  comparative_analysis_processing.py  cy_advance_analysis.py  data_processing.py  data_processing_complete.py  data_processing_simple.py  data_transformation.py  do_advance_analysis_processing.py  status_validations.py
src/advance_analysis/gui/: __init__.py  about_dialog.py  file_selection_widget.py  gui.py  run_gui.py  status_bar.py
src/advance_analysis/modules/: __init__.py  data_loader.py  excel_handler.py  excel_handler_crossplatform.py  excel_processor.py  file_handler.py
src/advance_analysis/utils/: __init__.py  data_utils.py  logging_config.py  recent_files.py  theme_files.py
src/advance_analysis/utils/themes/: azure.tcl  forest-dark.tcl  sun-valley-dark.tcl  sun-valley-light.tcl
test_data/: create_test_files.py
tests/: __init__.py
